--- a/app/src/main/res/drawable/rounded_button1.xml
+++ b/app/src/main/res/drawable/rounded_button1.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#f6d91d" />
+    <corners android:bottomRightRadius="3dp"
+        android:bottomLeftRadius="3dp"
+        android:topRightRadius="3dp"
+        android:topLeftRadius="3dp"/>
+</shape>
