--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,28 +7,64 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.codepath.tayousyl.activities.LoginActivity"
-    android:background="#0084B4">
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_button_white"
-        android:textColor="#0084B4"
-        android:padding="12dp"
-        android:textSize="20dp"
-        android:onClick="loginToRest"
-        android:text="@string/login_label"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/button" />
-
+    android:background="@color/white">
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:id="@+id/imageView"
-        android:src="@drawable/twitter_logo"
-        android:layout_above="@+id/button"
+        android:src="@drawable/ic_twitter_logo1"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="21dp" />
+         />
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="230dp"
+    android:background="#0084B4"
+    android:paddingTop="30dp"
+    android:layout_below="@+id/imageView"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_marginTop="12dp"
+    >
+
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/welcome"
+    android:textColor="@color/white"
+    android:textSize="26dp"
+    android:paddingTop="10dp"
+    android:paddingLeft="20dp"
+    android:id="@+id/textView"
+    android:textStyle="bold"
+    />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/follow"
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        android:paddingLeft="30dp"
+        android:id="@+id/textView1"
+        android:layout_below="@+id/textView"
+        android:textStyle="italic"
+        android:layout_centerHorizontal="true"
+        />
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_button1"
+        android:onClick="loginToRest"
+        android:padding="12dp"
+        android:text="@string/login_label"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:layout_marginTop="32dp"
+        android:layout_below="@+id/textView1"
+        android:layout_centerHorizontal="true"
+        />
+</RelativeLayout>
 
 </RelativeLayout>
