Design login file

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,17 +27,17 @@
     android:layout_marginTop="12dp"
     >
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/welcome"
-    android:textColor="@color/white"
-    android:textSize="26dp"
-    android:paddingTop="10dp"
-    android:paddingLeft="20dp"
-    android:id="@+id/textView"
-    android:textStyle="bold"
-    />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="monospace"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:text="@string/welcome"
+        android:textColor="@color/white"
+        android:textSize="26dp"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
